--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,10 @@ doctype html
 html
   head
     title= title
+    yourCV= yourCV
+    postcode= postcode
+    frequency= frequency
+    tags= tags
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block content
